add api change PW and docs
